# freegl

./: CMakeLists.txt  main.cpp
src/basics/: Color.cpp  Color.h  Material.cpp  Material.h  Normal.cpp  Normal.h  Position.cpp  Position.h  SimpleVertex.cpp  SimpleVertex.h  TextureCoord.cpp  TextureCoord.h  Vertex.cpp  Vertex.h
src/camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/compound2dObjects/: Circle.cpp  Circle.h  Plane.cpp  Plane.h  Triangle.cpp  Triangle.h
src/compound3dObject/: Cube.cpp  Cube.h  Prism.cpp  Prism.h  Sphere.cpp  Sphere.h
src/compound3dObjects/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  GridSystem.cpp  GridSystem.h  Prism.cpp  Prism.h  Pyramid.cpp  Pyramid.h  Sphere.cpp  Sphere.h
src/interface/: Interface.cpp  Interface.h
src/interface/styles/: LightStyle.h
src/light/: Light.cpp  Light.h
src/models/: Line.cpp  Line.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h
src/raw/: IndexBuffer.cpp  IndexBuffer.h  Interface.cpp  Interface.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexArrayLayout.cpp  VertexArrayLayout.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
src/resources/shaders/: fragmentShader.glsl  lineFragmentShader.glsl  linevertexShader.glsl  vertexShader.glsl
src/utils/: Convertion.h  Log.h
src/utils/glm/: CMakeLists.txt
src/utils/imgui/: imgui.h
src/utils/std_image/: std_image.cpp
